--- a/Algorithms/476.Number Complement——bit manipulation.md
+++ b/Algorithms/476.Number Complement——bit manipulation.md
@@ -25,7 +25,7 @@ Explanation: The binary representation of 1 is 1 (no leading zero bits), and its
 
 ### 思路1 （13ms）
 
-从后到前遍历每一位，如果是0，加上1右移第i位（i一开始为0，i++），1则不需要操作
+从后到前遍历每一位，如果是0，加上 1左移i位 的数（i一开始为0，i++），1则不需要操作
 
 ```java
 public class Solution {
